unpackaged/main/default/objects/Contact/fields/Subscription_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Expiration__c</fullName>
    <inlineHelpText>The expiration date is found in the Invoiced application.</inlineHelpText>
    <label>Subscription Expiration</label>
    <type>Date</type>
</CustomField>