unpackaged/main/default/objects/Contact/fields/System_Size_kW__c.field-meta.xml
<CustomField>
    <fullName>System_Size_kW__c</fullName>
    <description>Size of system in kw</description>
    <inlineHelpText>Size of system in kw</inlineHelpText>
    <label>System Size (kW)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>