unpackaged/main/default/objects/Contact/fields/TEST_Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>TEST_Referral_Code__c</fullName>
    <label>TEST - Referral Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>