unpackaged/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrator Contact</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Ops Manager</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Partner - Ambassador</fullName>
            </value>
            <value>
                <fullName>Partner - Community Lead</fullName>
            </value>
            <value>
                <fullName>Survey Recipient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>