unpackaged/main/default/objects/Contact/fields/Utility_cost_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Utility_cost_per_unit__c</fullName>
    <inlineHelpText>Enter the utility rate in dollars per kWh</inlineHelpText>
    <label>Utility cost per unit ($)</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>