unpackaged/main/default/objects/Contact/fields/Virtual_Sales_Training_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Sales_Training_Completed_Date__c</fullName>
    <label>Virtual Sales Training Completed Date</label>
    <type>Date</type>
</CustomField>