unpackaged/main/default/objects/Contact/fields/When_is_the_last_time_you_spoke_to_or_he__c.field-meta.xml
<CustomField>
    <fullName>When_is_the_last_time_you_spoke_to_or_he__c</fullName>
    <label>When is the last time you spoke to or he</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-3 Months</fullName>
            </value>
            <value>
                <fullName>4-6 Months</fullName>
            </value>
            <value>
                <fullName>6-12 Months</fullName>
            </value>
            <value>
                <fullName>1 year+</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>