unpackaged/main/default/objects/Contact/fields/Where_they_resolved__c.field-meta.xml
<CustomField>
    <fullName>Where_they_resolved__c</fullName>
    <label>Where they resolved?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>