unpackaged/main/default/objects/Contact/fields/x18_Char_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>x18_Char_Contact_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Char Contact ID</label>
    <type>Text</type>
</CustomField>