unpackaged/main/default/objects/Contact/fields/Yelp__c.field-meta.xml
<CustomField>
    <fullName>Yelp__c</fullName>
    <label>Yelp</label>
    <type>Url</type>
</CustomField>