unpackaged/main/default/objects/Contact/validationRules/Cannot_Edit_Email_Palmetto_Cloud.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Email_Palmetto_Cloud</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISCHANGED(  Email  ), 
$UserRole.Name &lt;&gt; "CEO", 
$UserRole.Name &lt;&gt; "Technology", 
$UserRole.Name &lt;&gt; "Hardware Engineer", 
$UserRole.Name &lt;&gt; "Technology President", 
(NOT(ISBLANK( SolarEdge_API_Key__c))))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>This contact's email address is linked to their Palmetto Cloud account, which cannot be changed.</errorMessage>
</ValidationRule>