unpackaged/main/default/objects/Contact/listViews/Ambassadors.listView-meta.xml
<ListView>
    <fullName>Ambassadors</fullName>
    <columns>Type__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Partner - Ambassador,Partner - Community Lead</value>
    </filters>
    <label>Ambassadors</label>
</ListView>