unpackaged/main/default/objects/Contact/listViews/LA_Resi_Contacts.listView-meta.xml
<ListView>
    <fullName>LA_Resi_Contacts</fullName>
    <columns>Company_Acquired_From__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Personal_Referral_Number__c</columns>
    <columns>TEST_Referral_Code__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_STREET</columns>
    <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_STATE_CODE</field>
        <operation>equals</operation>
        <value>LA</value>
    </filters>
    <label>LA Resi Contacts</label>
</ListView>