unpackaged/main/default/objects/Contact/listViews/Lead_Generation_Sources.listView-meta.xml
<ListView>
    <fullName>Lead_Generation_Sources</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Lead Generation Sources</label>
</ListView>