unpackaged/main/default/objects/Contact/listViews/Module_Shortage_Customers.listView-meta.xml
<ListView>
    <fullName>Module_Shortage_Customers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Module Shortage Customers</label>
</ListView>