unpackaged/main/default/objects/Contact/listViews/New_Sales_Reps.listView-meta.xml
<ListView>
    <fullName>New_Sales_Reps</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>Business_Development</value>
    </filters>
    <filters>
        <field>Alchemy_User_Type__c</field>
        <operation>equals</operation>
        <value>sales,Seller</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>auser</value>
    </filters>
    <label>New Sales Reps</label>
</ListView>