unpackaged/main/default/objects/Contact/listViews/Red_River_Portfolio.listView-meta.xml
<ListView>
    <fullName>Red_River_Portfolio</fullName>
    <columns>Personal_Referral_Number__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Parish__c</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>Deposit__c</columns>
    <columns>Contract_Length__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company_Acquired_From__c</field>
        <operation>equals</operation>
        <value>Red River</value>
    </filters>
    <label>Red River Portfolio</label>
</ListView>