unpackaged/main/default/objects/Contact/listViews/Untapped_Contacts.listView-meta.xml
<ListView>
    <fullName>Untapped_Contacts</fullName>
    <columns>Opportunity__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>Parish__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company_Acquired_From__c</field>
        <operation>notEqual</operation>
        <value>Red River,Eco-Clean</value>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS2_STATE</field>
        <operation>equals</operation>
        <value>louisiana</value>
    </filters>
    <label>Untapped Contacts</label>
</ListView>