unpackaged/main/default/objects/Contact/listViews/X2014_St_Bernard_Chamber_of_Commerce.listView-meta.xml
<ListView>
    <fullName>X2014_St_Bernard_Chamber_of_Commerce</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>14-15 St.B CoC Members</label>
</ListView>